syntax="proto3";

option go_package = "./proto";

package greet_service;

service GreetService {
    rpc SayHello(NoParam) returns (HelloResponse);

    rpc SayHelloServerStreaming(NamesList) returns (stream HelloResponse);

    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessagesList);

    rpc SayHelloBidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse);

    rpc SendUser(User) returns(AuthenticatedResponse);
}

message NoParam{};

message HelloRequest {
    string name = 1;
}

message HelloResponse{
    string message = 1;
}

message NamesList{
    repeated string names = 1;
}

message MessagesList {
    repeated string messages = 1;
}

message User {
    string username = 1;
    string password = 2;
}

message AuthenticatedResponse {
    int64 status = 1;
    string message = 2;
}
